--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="box">
                 <div class="box-top" id="stretch-countdown">Time to stretch!</div>
                 <div class="box-middle">
-                    <div class="icon">🧘‍♂️</div>
+                    <div class="icon">🧘‍♀️</div>
                     <button id="stretch-button" onclick="startTimer('stretch')">Stretch!</button>
                 </div>
                 <div class="box-bottom">
